--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -10,14 +10,13 @@
 
 <body>
     <header>
-        <div class="container-fluid p-4 border-fuente bg-resalte d-flex justify-content-between">
-            <div class="logo d-flex">
+        <div class="container-fluid p-3 border-fuente bg-resalte d-flex justify-content-between">
+            <div class="d-flex mt-3">
                 <div class="nf-logo">
                     <!--   <img src="../static/images/logo_NFF.png" alt="NF-Logo" class="nf-logo">-->
-                    <img th:src="@{/images/logo_NFF.png}" alt="NF-Logo" class="nf-logo">
-
+                    <img th:src="@{/images/logo_NFF.png}" alt="NF-Logo" class="nf-logo ">
                 </div>
-                <div class="logotext">
+                <div class="">
                     <div class="nutrifusion-food">
                         <!-- <img src="../static/images/logo_nombre.png" alt="NutriFusion Food" class="nutrifusion-food"> -->
                         <img th:src="@{/images/logo_nombre.png}" alt="NutriFusion Food" class="nutrifusion-food">
@@ -31,11 +30,11 @@
             <nav class="navbar-expand-lg d-inline-block col-md-6">
                 <div class="container-fluid-nav mt-3 px-5 text-center">
                     <ul class="navbar px-3">
-                        <li class="nav-item border-top border-fuente fs-4"><a href="/home"
+                        <li class="nav-item border-top border-fuente"><a href="/home"
                                 class="nav-link active">INICIO</a></li>
-                        <li class="nav-item border-top border-fuente fs-4"><a href="/recipes/categories"
+                        <!--<li class="nav-item border-top border-fuente fs-4"><a href="/recipes/categories"
                                 class="nav-link active">CATEGORIAS</a></li>
-                        <!--
+                        
                         <li>
                             <div class="dropdown">
                                 <button class="btn btn-fondo dropdown-toggle" type="button" id="dropdownMenu2"
@@ -51,9 +50,9 @@
                         </li>
                         -->
                         <li>
-                        <a class="nav-link dropdown-toggle border-top border-fuente fs-1"
+                        <a class="nav-link dropdown-toggle border-top border-fuente"
                             id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false">
+                            aria-expanded="true">
                             CATEGORIAS
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -61,18 +60,20 @@
                             <a class="dropdown-item" href="/recipes/categories/1">Salado</a>
                             <a class="dropdown-item" href="/recipes/categories/2">Postre</a>
                             <a class="dropdown-item" href="/recipes/categories/3">Bebida</a>
-                            <a class="dropdown-item" href="/recipes/categories/4">Postre</a>
+                            <a class="dropdown-item" href="/recipes/categories/4">Snack</a>
                         </div>
                         </li>
-                        <li class="nav-item border-top border-fuente fs-1"><a href="/recipes"
+                        <li class="nav-item border-top border-fuente"><a href="/recipes"
                                 class="nav-link active">RECETAS</a></li>
-                        <li class="nav-item border-top border-fuente fs-2"><a href="/nutritionists"
+                        <li class="nav-item border-top border-fuente"><a href="/nutritionists"
+                                class="nav-link active">NUTRICIONISTAS</a></li>
+                        <li class="nav-item border-top border-fuente"><a href="/nutritionists/1"
                                 class="nav-link active">PERFIL</a></li>
                     </ul>
                 </div>
             </nav>
-            <div class="signup-button d-inline rounded float-end">
-                <button type="button" class="btn btn-info border mt-3 mx-3 p-2">SIGN UP</button>
+            <div class="signup-button d-inline rounded float-end  mt-4">
+                <button type="button" class="btn btn-info border mx-3 p-2">SIGN UP</button>
 
             </div>
 
