--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -9,8 +9,10 @@
     <title>Profile</title>
 </head>
 <body>
+    <div class="container">
 <header th:insert="fragments.html :: header">Header</header>
-<h1 th:text="${nutritionist.username}"></h1>
+<main class="content">
+    <h1 th:text="${nutritionist.username}"></h1>
 <h2>Nombre: </h2>
 <p th:text="|${nutritionist.name} ${nutritionist.surname1} ${nutritionist.surname2}|"></p>
 <h2>Email: </h2>
@@ -19,6 +21,8 @@
 <p th:text="${nutritionist.birthDate}"></p>
 <!-- Falta añadir el listado de recetas favoritas y recetas creadas -->
     <br><br><br>
+</main>
 <footer th:insert="fragments.html::footer"></footer>
+</div>
 </body>
 </html>
