--- a/src/main/resources/templates/recipeForm.html
+++ b/src/main/resources/templates/recipeForm.html
@@ -9,31 +9,34 @@
     <title>Formulario recetas</title>
 </head>
 <body>
+    <div class="container">
 <header th:insert="fragments.html :: header">Header</header>
 <!--  Introducir un objeto receta nuevo, el listado de categorias, listado de ingredientes  -->
-<form action="#" th:action="@{/recipes}" th:object="${recipe}">
-    <label for="title">Titulo de la receta</label>
-    <input id="title" type="text" th:field="*{name}" maxlength="50">
-    <p>Categoria de la receta</p>
-    <!--
-    <select name="category" th:field="*{category.id}">
-        <option th:each="category:${categoryList}" th:value="${category.id}" th:text="category.name"></option>
-    </select>-->
-    <label for="time">Tiempo de preparacion</label>
-    <input id="time" type="number" th:field="*{time}"><br>
-   <!--
-    <select name="ingredient" th:field="*{ingredient.id}">
-        <option th:each="ingredient:${ingredientList}" th:value="${ingredient.id}" th:text="ingredient.name"></option>
-    </select>
-    -->
-    <label for="descripcion">Descripion</label>
-    <textarea name="descripcion" id="descripcion" cols="30" rows="10" th:field="*{description}"></textarea><br>
-    <label for="pasos">Pasos a seguir</label>
-    <textarea name="pasos" id="pasos" cols="30" rows="10" th:field="*{steps}"></textarea><br>
-    <!-- Añadir opcion de adjuntar imagen -->
-    <input type="submit" value="Crear">
-</form>
-
+<main class="content">
+    <form action="#" th:action="@{/recipes}" th:object="${recipe}">
+        <label for="title">Titulo de la receta</label>
+        <input id="title" type="text" th:field="*{name}" maxlength="50">
+        <p>Categoria de la receta</p>
+        <!--
+        <select name="category" th:field="*{category.id}">
+            <option th:each="category:${categoryList}" th:value="${category.id}" th:text="category.name"></option>
+        </select>-->
+        <label for="time">Tiempo de preparacion</label>
+        <input id="time" type="number" th:field="*{time}"><br>
+       <!--
+        <select name="ingredient" th:field="*{ingredient.id}">
+            <option th:each="ingredient:${ingredientList}" th:value="${ingredient.id}" th:text="ingredient.name"></option>
+        </select>
+        -->
+        <label for="descripcion">Descripion</label>
+        <textarea name="descripcion" id="descripcion" cols="30" rows="10" th:field="*{description}"></textarea><br>
+        <label for="pasos">Pasos a seguir</label>
+        <textarea name="pasos" id="pasos" cols="30" rows="10" th:field="*{steps}"></textarea><br>
+        <!-- Añadir opcion de adjuntar imagen -->
+        <input type="submit" value="Crear">
+    </form>    
+</main>
 <footer th:insert="fragments.html::footer"></footer>
+</div>
 </body>
 </html>
