--- a/src/main/resources/templates/scss/custom.scss
+++ b/src/main/resources/templates/scss/custom.scss
@@ -161,6 +161,9 @@ ul {
 .img-aboutus{
   width: 40vw;
 }
+.img-recipes{
+  width:13vw;
+}
 
 //RECIPE LIST
 .recipe-picture img {
@@ -217,6 +220,24 @@ ul {
   width: 100%;
 }
 */
+
+.recipe-tags {
+  width: 13vw;
+  height: 40px;
+  letter-spacing: 2px;
+  position: relative;
+}
+
+.recipe-tags ::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0px;
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+  border-right: 20px solid #D0EEF4;
+}
+
 
 //Añadir nuevas variable a continuacion de la importadas por bootstrap
 @mixin apply-font-style($style-map){
