--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -8089,6 +8089,10 @@ ul {
   width: 40vw;
 }
 
+.img-recipes {
+  width: 13vw;
+}
+
 .recipe-picture img {
   height: 400px;
   width: 100%;
@@ -8143,6 +8147,23 @@ ul {
   width: 100%;
 }
 */
+.recipe-tags {
+  width: 13vw;
+  height: 40px;
+  letter-spacing: 2px;
+  position: relative;
+}
+
+.recipe-tags ::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0px;
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+  border-right: 20px solid #D0EEF4;
+}
+
 h1 {
   font-weight: 400;
   font-size: 3.5rem;
