--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -48,7 +48,7 @@
                                 </div>
                             </div>
                         </li>
-                        -->
+                        
                         <li>
                         <a class="nav-link dropdown-toggle border-top border-fuente"
                             id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
@@ -62,7 +62,9 @@
                             <a class="dropdown-item" href="/recipes/categories/3">Bebida</a>
                             <a class="dropdown-item" href="/recipes/categories/4">Snack</a>
                         </div>
-                        </li>
+                        </li>-->
+                        <li class="nav-item border-top border-fuente"><a href="/categories"
+                            class="nav-link active">CATEGORIAS</a></li>
                         <li class="nav-item border-top border-fuente"><a href="/recipes"
                                 class="nav-link active">RECETAS</a></li>
                         <li class="nav-item border-top border-fuente"><a href="/nutritionists"
