Add borders and modify category bbdd

--- a/src/main/resources/templates/homecopy.html
+++ b/src/main/resources/templates/homecopy.html
@@ -58,7 +58,7 @@
                     <h2 class="text-info pb-2">ACERCA DE NOSOTROS</h2>
                     <div>
                         <div class="d-inline-block">
-                            <img th:src="@{/images/about-us.png}" alt="about-us" class="img-aboutus">
+                            <img th:src="@{/images/about-us.png}" alt="about-us" class="img-aboutus rounded">
                             <!--  <img src="../static/images/about-us.png" alt="about-us" class="img-aboutus">-->
                         </div>
                         <div class="d-inline-block mx-5">
