--- a/src/main/resources/templates/scss/custom.scss
+++ b/src/main/resources/templates/scss/custom.scss
@@ -166,6 +166,16 @@ ul {
   width:13vw;
 }
 
+.recipe-picture {
+  width: 47.5vw;
+  margin-left: 10px;
+}
+
+.recipe-data {
+  width: 47.5vw;
+  margin-left: 10px;
+}
+
 //RECIPE LIST
 .recipe-picture img {
   height: 400px;
